# cap-narrative-profile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROFILE.md  README.md  SPECIFICATION.md  VERSIONING.md  grimoire.code-workspace  profile-descriptor.json  pyproject.toml
conformance/invalid/: invalid_canonical_summary.expected.json  invalid_canonical_summary.json  invalid_missing_interpretation_pov.expected.json  invalid_missing_interpretation_pov.json  invalid_missing_observables.expected.json  invalid_missing_observables.json  invalid_observable_wrapped.expected.json  invalid_observable_wrapped.json  missing_scene_id.json  unknown_enum_value.expected.json  unknown_enum_value.json  unresolved_entity_ref.expected.json  unresolved_entity_ref.json
conformance/valid/: full_scene.json  minimal_registry.json  minimal_scene.json  minimal_story.json
docs/: CORE_ONTOLOGY_DRAFT.md  GBR_FIELD_AUDIT.md  NARRATIVE_PROFILE_MAPPING.md  terminology.md
docs/decisions/: ADR-006-observable-structure-interpretation.md  ADR-007-sip-extraction.md
docs/examples/: narrative_new_core.json  narrative_old_gbr.json  software_toy.json
docs/sip/: SPECIFICATION.md
examples/edge-cases/: analepsis_within_analepsis.json  dual_pov_split.json  flat_arc_focalizer.json  iterative_scene.json  non_present_character.json  omniscient_multiple_focalizer.json
examples/minimal/: character-state.json  registry.json  scene-card.json  story-architecture.json
grimoire-tooling/: Cargo.toml
grimoire-tooling/src/: dag.rs  gates.rs  python.rs
grimoire-types/: Cargo.toml
grimoire-types/src/: dag.rs  gates.rs  lib.rs  python.rs  recipe.rs  training.rs
protocol/: README.md  architecture.md  canonical-summary.md  character-state.md  entity-registry.md  scene-card.md  story-architecture.md
protocol/docs/: ENTITY_TYPES.md  ENUMS.md  ROUND_TRIP.md
reference/python/: gbr_validate.py
reference/rust/: Cargo.toml
schemas/: character-state.schema.json  enums.schema.json  narrative-profile.json  registry.schema.json  scene-card.schema.json  story-architecture.schema.json
schemas/profile/: narrative-canonical-summary.schema.json  narrative-context.schema.json  narrative-craft-targets.schema.json  (+10 more)
scripts/: __init__.py  validate_against_schema.py
template-schemas/: README.md  _generated.schema.json
(+211 files in other folders)
